--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,12 @@
 
 {% block title %}
 
-Bulat's shortener
+ИзиСсылка
 
 {% endblock %}
 
 
-{% block content1 %}
+{% block content %}
 <div id="main-container">
   <form id="main-form" method="post" action="/">
     <input type="text" class="form-url-input"
