--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,15 +5,10 @@
   <link rel="icon"
         href="https://img.icons8.com/dusk/64/000000/google-sites.png">
 
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-        crossorigin="anonymous">
-
   <title>
     {% block title %}
 
-    {% endblock %} | MIPT
+    {% endblock %}
   </title>
 
   <style type="text/css">
@@ -26,39 +21,57 @@
       width: 80vw;
     }
     #main-form {
-      font-size: 1vw;
+
     }
-    .form-url-input {
+    #form-url-input {
+      font-size: 2vw;
       width: 40vw;
+    }
+    #submit-url {
+      font-size: 2vw;
     }
     #output {
       margin-top: 10vh;
       font-size: 2vw;
     }
+    #header {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      background-color: #5181b8;
+      height: 10vh;
+      width: 100vw;
+      align-content: center;
+    }
+    #main-logo {
+      width: 20vw;
+      height: 7vh;
+      margin-left: 2vw;
+      font-size: 5vh;
+      color: white;
+      align-self: center;
+    }
+    #history-link {
+      margin-left: 1vw;
+      width: 10vw;
+      height: 5vh;
+      font-size: 4vh;
+      color: white;
+    }
+
 
 
   </style>
 
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" href={{ url_for("short_link_module.index")
+<div id="header">
+  <a id="main-logo" href={{ url_for("short_link_module.index")
   }}>ИзиСсылка</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse"
-          data-target="#navbarsExample03" aria-controls="navbarsExample03"
-          aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarsExample03">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href={{ url_for("short_link_module.history")
-        }}>История</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+  <a id="history-link" href={{ url_for("short_link_module.history")
+  }}>История</a>
+</div>
 {% block content %}
 
 {% endblock %}
