--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,9 +10,9 @@
 {% block content %}
 <div id="main-container">
   <form id="main-form" method="post" action="/">
-    <input type="text" class="form-url-input"
+    <input type="text" id="form-url-input"
        placeholder="Your url" name="link">
-    <input type="submit" value="Сократить">
+    <input type="submit" id="submit-url" value="Сократить">
   </form>
   <div id="output">
     {{ result }}
