--- a/app/templates/users_module/register.html
+++ b/app/templates/users_module/register.html
@@ -2,37 +2,48 @@
 
 {% block title %}
 
-Вход | ИзиСсылка
+Регистрация | ИзиСсылка
 
 {% endblock %}
 
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-{% block body %}{% endblock %}
 
 
 {% block content %}
 
-<form method="POST">
+
+<form id="login-form" method="POST">
+  {% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul class=flashes>
+  {% for message in messages %}
+  <li>{{ message }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+{% block body %}
+{% endblock %}
+
   <table>
     <tr>
-      <td><input type="text" placeholder="Логин" name="login"></td>
+      <td><input class="input-login" type="text" placeholder="Логин"
+                 name="login"></td>
     </tr>
     <tr>
-      <td><input type="text" placeholder="Пароль" name="password"></td>
+      <td><input class="input-login" type="text" placeholder="Пароль"
+                 name="password"></td>
     </tr>
     <tr>
-      <td><a href={{ url_for("users_module.login_page") }}>Уже зарегистрирован</a></td>
-      <td><input type="submit" value="Зарегистрироваться"></td>
+      <td><input class="login-button" type="submit" value="Зарегистрироваться">
+      </td>
+    </tr>
+    <tr>
+      <td><a href={{ url_for("users_module.login_page") }}>Уже
+        зарегистрирован</a></td>
     </tr>
   </table>
 </form>
 
 {% endblock %}
+
+
