--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,13 +15,11 @@
     #main-container {
       display: flex;
       flex-direction: column;
-      margin-top: 20vh;
-      margin-left: 20vw;
-      height: 50vh;
-      width: 80vw;
+      align-items: center;
+      width: 100vw;
     }
     #main-form {
-
+      margin-top: 20vh;
     }
     #form-url-input {
       font-size: 2vw;
@@ -33,6 +31,7 @@
     #output {
       margin-top: 10vh;
       font-size: 2vw;
+      align-self: center;
     }
     #header {
       display: flex;
@@ -59,6 +58,21 @@
       color: white;
     }
 
+    #login-form {
+      margin-top: 10vh;
+      font-size: 2vh;
+    }
+    .input-login {
+      width: 30vw;
+      font-size: 3vh;
+      margin-top: 1vh;
+    }
+    .login-button {
+      font-size: 2vh;
+      width: 12vw;
+      margin-top: 1vh;
+      margin-bottom: 1vh;
+    }
 
 
   </style>
@@ -72,9 +86,11 @@
   <a id="history-link" href={{ url_for("short_link_module.history")
   }}>История</a>
 </div>
+<div id="main-container">
 {% block content %}
 
 {% endblock %}
+</div>
 
 </body>
 </html>
