--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -93,22 +93,29 @@
   color: gray;
 }
 
-table {
+#history-table {
   border-collapse: collapse;
   font-size: 3vh;
   width: 80vw;
 }
 
-th {
+.history-th {
   border: 1px solid gray;
   font-weight: normal;
 }
 
-td {
+.history-td {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-wrap: normal;
   border: 1px solid gray;
   text-align: center;
+  max-height: 1vh;
+  max-width: 15vw;
 }
 
 .num-column {
+  border: 1px solid gray;
   width: 5vw;
+  text-align: center;
 }
