--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,23 @@
     {% endblock %}
   </title>
 
+  <script>
+    function clip_text(a_string){
+        var input = document.createElement('input')
+        input.id="__copyText__";
+        input.value = a_string;
+        document.body.appendChild(input);
+        input.select();
+        document.execCommand("copy");
+        var txt = input.value
+        input.remove()
+        console.log("OK COPIED: '"+txt+"'")
+    }
+    function clip_div(divId){
+       return clip_text(document.getElementById(divId).innerText)
+    }
+  </script>
+
 
 </head>
 <body>
